# py-erl-interface

./: .gitignore  Makefile  pyproject.toml  readme.md
example/: Makefile  example.py  external_wrapper.erl  readme.md
src/py_erl_interface/: __main__.py  erl_interface_ext_builder.py  pyei.cdef
